# cs488-project

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  attribution
assets/models/bottle/: bottle.blend  bottle.mtl  bottle_texture.xcf  bottle_texture_specular.xcf
assets/models/car/: car.mtl  car.xcf  car_specular.xcf
assets/models/cube/: cube.mtl
assets/models/goose/: Mesh_Goose.mtl
assets/models/pool/: genPool.py  pool.mtl
assets/models/teapot/: teapot.mtl
assets/textures/: crosshair.xcf
docs/: Doxyfile.in
final_report/: assignment_common.tex  bibliography.bib  main.tex
include/: bridgeChannelData.hpp  camera.hpp  controller.hpp  debugShapes.hpp  error.hpp  material.hpp  mesh.hpp  model.hpp  pointLight.hpp  quaternion.hpp  renderer.hpp  shader.hpp  singleton.hpp  texture.hpp  vertex.hpp  window.hpp
include/frontend/: aabbVisualiser.hpp  camera.hpp  controller.hpp  crosshair.hpp  debugShapes.hpp  material.hpp  mesh.hpp  model.hpp  particleSystem.hpp  physicsobject.hpp  pointLight.hpp  renderer.hpp  scene.hpp  shader.hpp  skybox.hpp  vertex.hpp  window.hpp
include/physics/: AABB.hpp  collision.hpp  constants.hpp  inertiaTensor.hpp  physicsEngine.hpp  physicsObj.hpp  rigidBody.hpp  rigidBodyMesh.hpp  spatialGrid.hpp
include/sim/: staggeredGrid.hpp  waterHeightGrid.hpp  waterMesh.hpp  waterSimulation.hpp
include/util/: channel.hpp  error.hpp  json.hpp  logger.hpp  math.hpp  perf.hpp  quaternion.hpp  queueChannel.hpp  singleton.hpp  tripleBufferedChannel.hpp
proposal_first_draft/: assignment_common.tex  bibliography.bib  main.tex
scenes/: obj1.json  obj2.json  obj3.json  obj4-5.json  obj6.json  obj7.json  obj8.json  test.json  testAll.json  testAllLights.json
shaders/fragment/: blinnPhongTextureShader.glsl  blinnPhongWaterSurface.glsl  hudShader.glsl  particleFragment.glsl  phongTextureShader.glsl  rainbowTriTest.glsl  simpleWaterSurface.glsl  skybox.glsl  sunBlinnPhongTextureShader.glsl  textureShader.glsl  uniformColour.glsl
shaders/geometry/: phongWaterSurface.glsl  waterSurface.glsl
shaders/vertex/: crosshairShader.glsl  debugInstancedShader.glsl  flatTexTriTest.glsl  lightPerspTextureShader.glsl  modelLightPerspTextureShader.glsl  modelPerspTextureShader.glsl  particleVertex.glsl  perspTextureShader.glsl  perspectiveRainbowTriTest.glsl  rainbowTriTest.glsl  skybox.glsl  waterSurface.glsl
src/: camera.cpp  controller.cpp  error.cpp  logger.cpp  main.cpp  material.cpp  mesh.cpp  model.cpp  quaternion.cpp  renderer.cpp  shader.cpp  texture.cpp  vertex.cpp  window.cpp
src/frontend/: camera.cpp  controller.cpp  material.cpp  mesh.cpp  model.cpp  particleSystem.cpp  physicsobject.cpp  renderer.cpp  scene.cpp  shader.cpp  skybox.cpp  texture.cpp  vertex.cpp  window.cpp
src/physics/: AABB.cpp  collision.cpp  inertiaTensor.cpp  physicsEngine.cpp  physicsObj.cpp  rigidBody.cpp  rigidBodyMesh.cpp
src/sim/: waterMesh.cpp  waterSimulation.cpp
src/util/: error.cpp  json.cpp  logger.cpp  quaternion.cpp
